@@ -388,9 +388,9 @@ public class DataTypeByte extends BaseDataTypeComponent
 	 */
 	public String getWhereClauseValue(Object value, ISQLDatabaseMetaData md) {
 		if (value == null || value.toString() == null || value.toString().length() == 0)
-			return _colDef.getLabel() + " IS NULL";
+			return _colDef.getColumnName() + " IS NULL";
 		else
-			return _colDef.getLabel() + "=" + value.toString();
+			return _colDef.getColumnName() + "=" + value.toString();
 	}
 	
 	
